--- a/.gitignore
+++ b/.gitignore
@@ -12,30 +12,9 @@ TestResults
 *.suo
 *.user
 *.sln.docstates
+Web.config
 
 # Build results
-[Dd]ebug/
-[Rr]elease/
-x64/
-*_i.c
-*_p.c
-*.ilk
-*.meta
-*.obj
-*.pch
-*.pdb
-*.pgc
-*.pgd
-*.rsp
-*.sbr
-*.tlb
-*.tli
-*.tlh
-*.tmp
-*.log
-*.vspscc
-*.vssscc
-.builds
 
 # Visual C++ cache files
 ipch/
