--- a/broccoli/BroccoliMvc/Web.config
+++ b/broccoli/BroccoliMvc/Web.config
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <!--
   For more information on how to configure your ASP.NET application, please visit
   http://go.microsoft.com/fwlink/?LinkId=169433
@@ -12,8 +12,8 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
   <connectionStrings>
-    <clear/>
-    <add name="BroccoliEntities" connectionString="metadata=res://*/BroccoliEntities.csdl|res://*/BroccoliEntities.ssdl|res://*/BroccoliEntities.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=WIN-9JP4CHPG8VM;initial catalog=Broccoli;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+	  <clear />
+	  <add connectionString="metadata=res://*/BroccoliEntities.csdl|res://*/BroccoliEntities.ssdl|res://*/BroccoliEntities.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=OWNEROR-SM8IPUL;initial catalog=Broccoli;User ID=sa;Password=123;Integrated Security=false;MultipleActiveResultSets=True;App=EntityFramework&quot;" name="BroccoliEntities" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <system.web>
     <compilation debug="true" targetFramework="4.0" />
@@ -30,6 +30,7 @@
     <authentication mode="Forms">
       <forms loginUrl="~/Account/LogOn" timeout="2880" />
     </authentication>
+	<customErrors mode="Off" />
   </system.web>
   <system.webServer>
     <validation validateIntegratedModeConfiguration="false" />
