--- a/broccoli/BroccoliMvc/Web.config
+++ b/broccoli/BroccoliMvc/Web.config
@@ -13,7 +13,7 @@
   </appSettings>
   <connectionStrings>
 	  <clear />
-	  <add connectionString="metadata=res://*/BroccoliEntities.csdl|res://*/BroccoliEntities.ssdl|res://*/BroccoliEntities.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=OWNEROR-SM8IPUL;initial catalog=Broccoli;User ID=sa;Password=123;Integrated Security=false;MultipleActiveResultSets=True;App=EntityFramework&quot;" name="BroccoliEntities" providerName="System.Data.EntityClient" />
+	  <add connectionString="metadata=res://*/BroccoliEntities.csdl|res://*/BroccoliEntities.ssdl|res://*/BroccoliEntities.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=localhost;initial catalog=Broccoli;User ID=sa;Password=123;Integrated Security=false;MultipleActiveResultSets=True;App=EntityFramework&quot;" name="BroccoliEntities" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <system.web>
     <compilation debug="true" targetFramework="4.0" />
