made login page

--- a/broccoli/BroccoliMvc/BroccoliMvc.csproj
+++ b/broccoli/BroccoliMvc/BroccoliMvc.csproj
@@ -145,9 +145,15 @@
     <Content Include="Content\img\button_ok_7852.png" />
     <Content Include="Content\img\cross_2615.png" />
     <Content Include="Content\img\dep_5856564-Green-Profit-Icon.jpg" />
+    <Content Include="Content\img\fancybox\blank.gif" />
+    <Content Include="Content\img\fancybox\fancybox_buttons.png" />
+    <Content Include="Content\img\fancybox\fancybox_loading.gif" />
+    <Content Include="Content\img\fancybox\fancybox_sprite.png" />
     <Content Include="Content\img\footer.png" />
     <Content Include="Content\img\forexinn_logo.jpg" />
     <Content Include="Content\img\generic-button-green-bg.png" />
+    <Content Include="Content\img\img1s.jpg" />
+    <Content Include="Content\img\img2s.jpg" />
     <Content Include="Content\img\logo-flag.png" />
     <Content Include="Content\img\slider-background.png" />
     <Content Include="Content\img\tiangle-top.png" />
@@ -207,11 +213,20 @@
     <Content Include="Content\themes\base\minified\jquery.ui.slider.min.css" />
     <Content Include="Content\themes\base\minified\jquery.ui.tabs.min.css" />
     <Content Include="Content\themes\base\minified\jquery.ui.theme.min.css" />
+    <Content Include="Content\themes\fancybox\jquery.fancybox-buttons.css" />
+    <Content Include="Content\themes\fancybox\jquery.fancybox-thumbs.css" />
+    <Content Include="Content\themes\fancybox\jquery.fancybox.css" />
     <Content Include="Files\TradingSystems\kmplayer_downloader.exe" />
     <Content Include="Files\TradingSystems\mvc4vs2010.3f.3f.3fnew.exe" />
     <Content Include="Files\TradingSystems\MVC4VS2010_Loc.exe" />
     <Content Include="Global.asax" />
     <None Include="Scripts\jquery-1.7.1.intellisense.js" />
+    <Content Include="Scripts\fancybox\jquery.easing-1.3.pack.js" />
+    <Content Include="Scripts\fancybox\jquery.fancybox-buttons.js" />
+    <Content Include="Scripts\fancybox\jquery.fancybox-thumbs.js" />
+    <Content Include="Scripts\fancybox\jquery.fancybox.js" />
+    <Content Include="Scripts\fancybox\jquery.fancybox.pack.js" />
+    <Content Include="Scripts\fancybox\jquery.mousewheel-3.0.6.pack.js" />
     <Content Include="Scripts\jquery-1.7.1.js" />
     <Content Include="Scripts\jquery-1.7.1.min.js" />
     <Content Include="Scripts\jquery-ui-1.8.20.js" />
