--- a/broccoli/BroccoliMvc/BroccoliMvc.csproj
+++ b/broccoli/BroccoliMvc/BroccoliMvc.csproj
@@ -156,8 +156,10 @@
     <Content Include="Content\img\img2s.jpg" />
     <Content Include="Content\img\logo-flag.png" />
     <Content Include="Content\img\slider-background.png" />
+    <Content Include="Content\img\temp_logo.png" />
     <Content Include="Content\img\tiangle-top.png" />
     <Content Include="Content\img\vk_logo.png" />
+    <Content Include="Content\img\vk_up_back.gif" />
     <Content Include="Content\Site.css" />
     <Content Include="Content\themes\base\images\ui-bg_flat_0_aaaaaa_40x100.png" />
     <Content Include="Content\themes\base\images\ui-bg_flat_75_ffffff_40x100.png" />
@@ -220,7 +222,6 @@
     <Content Include="Files\TradingSystems\mvc4vs2010.3f.3f.3fnew.exe" />
     <Content Include="Files\TradingSystems\MVC4VS2010_Loc.exe" />
     <Content Include="Global.asax" />
-    <None Include="Scripts\jquery-1.7.1.intellisense.js" />
     <Content Include="Scripts\fancybox\jquery.easing-1.3.pack.js" />
     <Content Include="Scripts\fancybox\jquery.fancybox-buttons.js" />
     <Content Include="Scripts\fancybox\jquery.fancybox-thumbs.js" />
@@ -233,7 +234,6 @@
     <Content Include="Scripts\jquery-ui-1.8.20.min.js" />
     <Content Include="Scripts\jquery.unobtrusive-ajax.js" />
     <Content Include="Scripts\jquery.unobtrusive-ajax.min.js" />
-    <None Include="Scripts\jquery.validate-vsdoc.js" />
     <Content Include="Scripts\jquery.validate.js" />
     <Content Include="Scripts\jquery.validate.min.js" />
     <Content Include="Scripts\jquery.validate.unobtrusive.js" />
@@ -251,6 +251,11 @@
     <Content Include="Scripts\PersonalCabinet\cabinet.js" />
     <Content Include="Scripts\PersonalCabinet\order.js" />
     <Content Include="Scripts\Register\register.form.js" />
+    <Content Include="Scripts\slider\coda-slider.1.1.1.pack.js" />
+    <Content Include="Scripts\slider\jquery-1.2.1.pack.js" />
+    <Content Include="Scripts\slider\jquery-easing-compatibility.1.2.pack.js" />
+    <Content Include="Scripts\slider\jquery-easing.1.2.pack.js" />
+    <Content Include="Scripts\vk_up_button\button.js" />
     <Content Include="Web.config">
       <SubType>Designer</SubType>
     </Content>
@@ -295,6 +300,10 @@
       <Project>{e15039ab-22fd-4747-b326-208b0967492f}</Project>
       <Name>Logics</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Scripts\jquery-1.7.1.intellisense.js" />
+    <None Include="Scripts\jquery.validate-vsdoc.js" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
