--- a/broccoli/Domain/Domain.csproj
+++ b/broccoli/Domain/Domain.csproj
@@ -70,6 +70,9 @@
     <Compile Include="Models\EmailMessage.cs" />
     <Compile Include="Models\Status.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Referrer.cs">
+      <DependentUpon>BroccoliEntities.tt</DependentUpon>
+    </Compile>
     <Compile Include="Status.cs">
       <DependentUpon>BroccoliEntities.tt</DependentUpon>
     </Compile>
