--- a/broccoli/BroccoliMvc/BroccoliMvc.csproj
+++ b/broccoli/BroccoliMvc/BroccoliMvc.csproj
@@ -131,9 +131,10 @@
     <Compile Include="Models\Account\UserProfilePoco.cs" />
     <Compile Include="Models\PersonalCabinet\AccountListPoco.cs" />
     <Compile Include="Models\PersonalCabinet\AccountRowModel.cs" />
+    <Compile Include="Models\PersonalCabinet\DetailsHostRowModel.cs" />
     <Compile Include="Models\PersonalCabinet\InviteListModelPoco.cs" />
     <Compile Include="Models\PersonalCabinet\StatisticsListPoco.cs" />
-    <Compile Include="Models\PersonalCabinet\StatisticsRowModel.cs" />
+    <Compile Include="Models\PersonalCabinet\HostRowModel.cs" />
     <Compile Include="Models\PersonalCabinet\TradingSystemListPoco.cs" />
     <Compile Include="Models\PersonalCabinet\TradingSystemOrderPoco.cs" />
     <Compile Include="Models\PersonalCabinet\TradingSystemRowModel.cs" />
@@ -222,10 +223,31 @@
     <Content Include="Content\themes\fancybox\jquery.fancybox-buttons.css" />
     <Content Include="Content\themes\fancybox\jquery.fancybox-thumbs.css" />
     <Content Include="Content\themes\fancybox\jquery.fancybox.css" />
+    <Content Include="Content\themes\jquery-ui\images\ui-bg_flat_0_aaaaaa_40x100.png" />
+    <Content Include="Content\themes\jquery-ui\images\ui-bg_flat_75_ffffff_40x100.png" />
+    <Content Include="Content\themes\jquery-ui\images\ui-bg_glass_55_fbf9ee_1x400.png" />
+    <Content Include="Content\themes\jquery-ui\images\ui-bg_glass_65_ffffff_1x400.png" />
+    <Content Include="Content\themes\jquery-ui\images\ui-bg_glass_75_dadada_1x400.png" />
+    <Content Include="Content\themes\jquery-ui\images\ui-bg_glass_75_e6e6e6_1x400.png" />
+    <Content Include="Content\themes\jquery-ui\images\ui-bg_glass_95_fef1ec_1x400.png" />
+    <Content Include="Content\themes\jquery-ui\images\ui-bg_highlight-soft_75_cccccc_1x100.png" />
+    <Content Include="Content\themes\jquery-ui\images\ui-icons_222222_256x240.png" />
+    <Content Include="Content\themes\jquery-ui\images\ui-icons_2e83ff_256x240.png" />
+    <Content Include="Content\themes\jquery-ui\images\ui-icons_454545_256x240.png" />
+    <Content Include="Content\themes\jquery-ui\images\ui-icons_888888_256x240.png" />
+    <Content Include="Content\themes\jquery-ui\images\ui-icons_cd0a0a_256x240.png" />
+    <Content Include="Content\themes\jquery-ui\jquery-ui-1.9.2.custom.css" />
+    <Content Include="Content\themes\jquery-ui\jquery-ui-1.9.2.custom.min.css" />
+    <Content Include="Content\_dashboard-1357732027.css" />
+    <Content Include="Content\_metrika-1357732027.css" />
     <Content Include="Files\TradingSystems\kmplayer_downloader.exe" />
     <Content Include="Files\TradingSystems\mvc4vs2010.3f.3f.3fnew.exe" />
     <Content Include="Files\TradingSystems\MVC4VS2010_Loc.exe" />
     <Content Include="Global.asax" />
+    <Content Include="Scripts\amcharts\amcharts.js" />
+    <Content Include="Scripts\amcharts\images\dragIcon.gif" />
+    <Content Include="Scripts\amcharts\images\dragIconH.gif" />
+    <Content Include="Scripts\amcharts\images\lens.png" />
     <Content Include="Scripts\fancybox\jquery.easing-1.3.pack.js" />
     <Content Include="Scripts\fancybox\jquery.fancybox-buttons.js" />
     <Content Include="Scripts\fancybox\jquery.fancybox-thumbs.js" />
@@ -261,6 +283,8 @@
     <Content Include="Scripts\slider\jquery-easing-compatibility.1.2.pack.js" />
     <Content Include="Scripts\slider\jquery-easing.1.2.pack.js" />
     <Content Include="Scripts\tablesorter\jquery.tablesorter.min.js" />
+    <Content Include="Scripts\tablesorter\stupidtable.js" />
+    <Content Include="Scripts\tablesorter\stupidtable.min.js" />
     <Content Include="Scripts\vk_up_button\button.js" />
     <Content Include="Web.config">
       <SubType>Designer</SubType>
