fix my trip list

--- a/broccoli.partner/BroccoliMvc/BroccoliMvc.csproj
+++ b/broccoli.partner/BroccoliMvc/BroccoliMvc.csproj
@@ -160,6 +160,7 @@
     <Content Include="Content\img\img1s.jpg" />
     <Content Include="Content\img\img2s.jpg" />
     <Content Include="Content\img\logo-flag.png" />
+    <Content Include="Content\img\lRKb-zv5wcM.jpg" />
     <Content Include="Content\img\slider-background.png" />
     <Content Include="Content\img\temp_logo.png" />
     <Content Include="Content\img\tiangle-top.png" />
