order after invite users

--- a/broccoli/BroccoliMvc/Web.config
+++ b/broccoli/BroccoliMvc/Web.config
@@ -10,6 +10,9 @@
     <add key="PreserveLoginUrl" value="true" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
+    <add key="FirstSystem" value="4" />
+    <add key="SecondSystem" value="6" />
+    <add key="OtherSystem" value="999" />
   </appSettings>
   <connectionStrings>
 	  <clear />
