fix register bug

--- a/broccoli/BroccoliMvc/BroccoliMvc.csproj
+++ b/broccoli/BroccoliMvc/BroccoliMvc.csproj
@@ -166,6 +166,7 @@
     <Content Include="Content\img\depositphotos_15705219-Brassica-Oleracea--Romanesco-broccoli--Roman-cauliflower.jpg" />
     <Content Include="Content\img\depositphotos_15705219-Brassica-Oleracea--Romanesco-broccoli--Roman-cauliflower.png" />
     <Content Include="Content\img\depositphotos_15705219-Brassica-Oleracea--Romanesco-broccoli--Roman-cauliflower1.png" />
+    <Content Include="Content\img\depositphotos_1934943-Fitness-alarm-clock.jpg" />
     <Content Include="Content\img\depositphotos_1950636-Various-vegetables-isolated.jpg" />
     <Content Include="Content\img\dep_5856564-Green-Profit-Icon.jpg" />
     <Content Include="Content\img\fancybox\blank.gif" />
