--- a/broccoli/BroccoliMvc/BroccoliMvc.csproj
+++ b/broccoli/BroccoliMvc/BroccoliMvc.csproj
@@ -428,9 +428,12 @@
     <Content Include="Scripts\ckeditor\samples\assets\posteddata.php" />
     <Content Include="Scripts\ckeditor\samples\sample_posteddata.php" />
     <Content Include="Scripts\ckeditor\skins\moono\readme.md" />
-    <Content Include="Files\TradingSystems\Instructions\GarantedProfit.docx" />
-    <Content Include="Files\TradingSystems\Instructions\Max Trade.docx" />
-    <Content Include="Files\TradingSystems\Instructions\Money+.docx" />
+    <Content Include="Files\TradingSystems\GarantedProfit.rar" />
+    <Content Include="Files\TradingSystems\Instructions\GarantedProfit.pdf" />
+    <Content Include="Files\TradingSystems\Instructions\Max Trade.pdf" />
+    <Content Include="Files\TradingSystems\Instructions\Money+.pdf" />
+    <Content Include="Files\TradingSystems\Max Trade.rar" />
+    <Content Include="Files\TradingSystems\Money+.rar" />
     <None Include="Scripts\jquery-1.7.1.intellisense.js" />
     <None Include="Scripts\jquery.validate-vsdoc.js" />
     <Content Include="Views\Shared\MainMenu.cshtml" />
