--- a/broccoli/BroccoliMvc/BroccoliMvc.csproj
+++ b/broccoli/BroccoliMvc/BroccoliMvc.csproj
@@ -161,6 +161,7 @@
     <Content Include="Content\img\button_ok_7852.png" />
     <Content Include="Content\img\calc1.png" />
     <Content Include="Content\img\cross_2615.png" />
+    <Content Include="Content\img\demo.png" />
     <Content Include="Content\img\depositphotos_1066825-Pineapple.jpg" />
     <Content Include="Content\img\depositphotos_1158059-Young-sunflower-sprout.jpg" />
     <Content Include="Content\img\depositphotos_1374386-A-vegetarian-construction-isolated.jpg" />
@@ -169,7 +170,10 @@
     <Content Include="Content\img\depositphotos_15705219-Brassica-Oleracea--Romanesco-broccoli--Roman-cauliflower.png" />
     <Content Include="Content\img\depositphotos_15705219-Brassica-Oleracea--Romanesco-broccoli--Roman-cauliflower1.png" />
     <Content Include="Content\img\depositphotos_1934943-Fitness-alarm-clock.jpg" />
+    <Content Include="Content\img\depositphotos_1934943-Fitness-alarm-clock.png" />
     <Content Include="Content\img\depositphotos_1950636-Various-vegetables-isolated.jpg" />
+    <Content Include="Content\img\depositphotos_1950636-Various-vegetables-isolated.png" />
+    <Content Include="Content\img\depositphotos_5140805-Black-screen.jpg" />
     <Content Include="Content\img\dep_5856564-Green-Profit-Icon.jpg" />
     <Content Include="Content\img\fancybox\blank.gif" />
     <Content Include="Content\img\fancybox\fancybox_buttons.png" />
@@ -190,12 +194,15 @@
     <Content Include="Content\img\forexinn_logo.jpg" />
     <Content Include="Content\img\generic-button-green-bg.png" />
     <Content Include="Content\img\hr-shadow.jpg" />
+    <Content Include="Content\img\ic_sh.png" />
     <Content Include="Content\img\img1s.jpg" />
     <Content Include="Content\img\img2s.jpg" />
     <Content Include="Content\img\logo-flag.png" />
+    <Content Include="Content\img\play.png" />
     <Content Include="Content\img\slider-background.png" />
     <Content Include="Content\img\temp_logo.png" />
     <Content Include="Content\img\tiangle-top.png" />
+    <Content Include="Content\img\ui-s1085f21318.png" />
     <Content Include="Content\img\vk_logo.png" />
     <Content Include="Content\img\vk_up_back.gif" />
     <Content Include="Content\Site.css" />
